# practice-python-cryptography

./: README.md  pyproject.toml
src/01 - Python Basics/: .m00.ipynb.sage-jupyter2  m00.ipynb
src/02 - Breaking Ancient Ciphers/: crypto.txt  m02.ipynb
src/03 - OTP/: m03.ipynb
src/04 - RNG_LCG-MT/: LCG.rnd  m04solved.ipynb
src/05 - Hash/: m05solved.ipynb
src/06 - Stream Cipher/: .m06.ipynb.sage-jupyter2  m06solved.ipynb
src/07 - Block Cipher/: .m07.ipynb.sage-jupyter2  m07.ipynb  m07solved.ipynb
src/09 - DH/: m08.ipynb  m08solved.ipynb
src/10 - RSA/: .m10.ipynb.sage-jupyter2  m10.ipynb  m10solved.ipynb
